Restore Version 2.0 in one commit.